<resources>
    <string name="app_name">CareOnTheGo</string>
    <string name="title_timetable">Timetable</string>
    <string name="task_name_table_title">Task:</string>
    <string name="task_date_table_title">Date:</string>
    <string name="task_start_table_title">Start Time:</string>
    <string name="task_finish_table_title">End Time:</string>
    <string name="task_information_table_title">Information:</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot Username / Password?</string>

    <string name="forgottenCredentialsPrompt"> Please enter your email address below so we can send
        you a link to remind you of your username and reset your password.
    </string>
    <string name="emailAddressPrompt">Email Address</string>

    <string name="title_feedback">Feedback</string>
    <string name="patient_name">Patient Name:</string>
    <string name="day_of_the_week">Day of the Week:</string>

    <!-- Patient Info Strings -->
    <string name="title_patientInfo">Patient Info</string>
    <string name="ice_numbers_title"> ICE (in case of emergency) Contact Details: </string>
    <string name="relevant_info_title"> Extra relevant information:</string>
    <string name="new_patient_button"> Add New Patient</string>

    <!-- Add New Patient Fields -->
    <string name="p_prompt">Please enter the new patient information below: </string>
    <string name="p_firstName">Patient First Name: </string>
    <string name="p_surname">Patient Surname: </string>
    <string name="p_age">Patient Age: </string>
    <string name="p_address">Patient Address: </string>
    <string name="p_extraNotes">Patient Extra Notes: </string>
    <string name="p_iceNumbers">Patient ICE Numbers: </string>

    <string-array name="patient_array">
        <item>Patient 1</item>
        <item>Patient 2</item>
        <item>Patient 3</item>
        <item>Patient 4</item>
    </string-array>

    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="table_title">Medication Name: </string>
    <string name="table_quantity">Medication Quantity: </string>
    <string name="title_medManagement">Medication</string>
    <string name="medNotes">Extra Medication Notes:</string>
    <string name="newMedButton">Add New Medication</string>
    <string name="newMedNoteButton"> Add Medication Notes</string>

    <string name="addNewMedPrompt">Please enter the new medication information below:</string>

    <string name="notePrompt"> Please update your notes here...</string>

    <string name="feedback_prompt">Please provide some feedback so we can improve this application in the future...</string>
    <string name="feedback_or_report">Leave feedback / Report a problem</string>
    <string name="rating_bar">Please select a rating!</string>
    <string name="feedback_submit">Submit</string>
    <string-array name="feedback_array">
        <item name="feedbackChoice1">Leave feedback</item>
        <item name="feedbackChoice2">Report a problem / bug</item>
    </string-array>

    <string name="bugPrompt">Please provide some details that explain your bug / problem...</string>
    <string-array name="bug_array">
        <item>Report a problem / bug</item>
        <item>Leave feedback</item>
    </string-array>

    <string name="title_activity_login">Login</string>
    <string name="logged_in_activity">Logged In Activity</string>


    <string name="add_timetable_note_prompt">Add New Timetable Note</string>

    <string name="newNoteIntroSentence">Please enter the information for your new note below: </string>
    <string name="noteNameText">Note Name:</string>
    <string name="noteDateText">Note Day:</string>
    <string name="noteStartText">Note Start Time:</string>
    <string name="noteEndText">Note End Time:</string>
    <string name="noteInfoText">Note Info:</string>


    <string name="title_account">Account Management</string>
    <string name="edit_account_prompt">If you wish to edit any existing account details then please press the button below.</string>
    <string name="delete_account_prompt">If you wish to delete your account entirely, please press the button below.</string>
    <string name="delete_account_warning">WARNING: THIS ACTION WILL PERMANENTLY REMOVE YOUR ACCOUNT FROM THE SYSTEM.</string>
    <string name="edit_account_button">Edit Account Details</string>
    <string name="delete_account_button">Delete Account</string>

    <string name="edit_account_message">Please enter your new login details below.</string>
    <string name="new_username_prompt">New Username:</string>
    <string name="new_password_prompt">New Password:</string>

</resources>
