<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.loginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="472dp"
        android:layout_height="389dp"
        android:src="@drawable/login_screen_logo"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/box_back"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="textPersonName"
        android:paddingLeft="4pt"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/forgotLoginBtn"
        android:layout_width="258dp"
        android:layout_height="44dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/box_back"
        android:text="@string/login_forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSubmitBtn" />

    <Button
        android:id="@+id/loginSubmitBtn"
        android:layout_width="87dp"
        android:layout_height="34dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/box_back"
        android:text="@string/feedback_submit"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/box_back"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:paddingLeft="4pt"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

</androidx.constraintlayout.widget.ConstraintLayout>